sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:4: error: not found: value cand
    cand=getValeur(i)
    ^AlgSelectionSort:6: error: not found: value cand
      if (!plusPetitQue(j,cand)){
                          ^AlgSelectionSort:7: error: not found: value cand
        cand=getValeur(j)
        ^AlgSelectionSort:8: error: not found: value ehcange
        ehcange(i,j)
        ^